[project]
name = "aiotopicdb"
version = "0.1.0"
description = "The aiotopicdb package is an asynchronous implementation of TopicDB with an accompanying FastAPI-based API"
readme = "README.md"
authors = [
    { name = "Brett Kromkamp", email = "brettkromkamp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.6",
    "typed-tree>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 120
