[metadata]
name = aiotopicdb
version = attr: aiotopicdb.version.__version__
author = Brett Alistair Kromkamp
author_email = brettkromkamp@gmail.com
description = Pending
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brettkromkamp/aiotopicdb
project_urls =
    Bug Tracker = https://github.com/brettkromkamp/aiotopicdb/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
install_requires =
    aiosqlite>=0.19.0
    fastapi>=0.109.1
    python-slugify>=8.0.3
    typed-tree>=1.0.8
    uvicorn[standard]>=0.27.0.post1